--- a/completecourse/sass/_general.scss
+++ b/completecourse/sass/_general.scss
@@ -241,6 +241,7 @@ body.skin-Microsoft {
 		width: 100%;
 		height: 100%;
 		display: block !important;
+		overflow: visible;
 	}
 }
 
@@ -262,7 +263,7 @@ video {
 	background-color: #E5F0F1; //$video-background-color;
 
 	overflow: hidden;
-	-webkit-overflow-scrolling: touch;
+	/*-webkit-overflow-scrolling: touch;*/
 
 	.overlay {
 		position: absolute;
@@ -823,6 +824,7 @@ span.completed {
 
 .habitat-body {
 	font-family: 'Source Sans Pro', sans-serif;
+	overflow: hidden;
 
 	&:not(.xs) {
 		margin-left: 5em !important;
